Basics/Deployment/python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /app/data
          name: app-storage
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: python-app-pvc
